Quorum3/Library/Tests/Actions/Pass/ReturnIfElseInt1.quorum
class Main
    action Main
        integer a = -2
        output foo(a)
    end

    action foo (integer a) returns integer
        if a < 0
            return -1
        else
            return 1
        end
    end
end