Quorum3/Library/Tests/Actions/Fail/InvalidReturnInBlock.quorum
class Main 
    action Main
        if 1 = 1
            return now
            a = 5
        end
    end
end